# memagora

./: CLAUDE.md  FOUNDATION.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: deploy-docs.yml
benchmarks/: BENCHMARKS.md  README.md  convomem_bench.py  locomo_bench.py  longmemeval_bench.py
contracts/: README.md  __init__.py  api.py  facts.py  pyproject.toml
docs/rfcs/: 002-source-adapter-plugin-spec.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
integrations/openclaw/: SKILL.md
mempalace/: README.md  audit.py  audit_cli.py  backend_agora.py  classifier.py  cli.py  client.py  closet_llm.py  config.py  config_agora.py  convo_miner.py  dedup.py  general_extractor.py  knowledge_graph.py  layers.py  mcp_server.py  miner.py  onboarding.py  palace.py  palace_graph.py  sweeper.py
mempalace/backends/: base.py  chroma.py  registry.py
mempalace/classifier_prompts/: __init__.py  default.md
tests/: test_audit.py  test_audit_cli.py  test_backend_agora.py  test_backends.py  test_classifier.py  test_classifier_eval.py  test_cli.py  test_client.py  test_closet_llm.py  test_closets.py  test_config.py  test_config_agora.py  test_contracts.py  test_dedup.py  test_entity_detector.py  test_i18n.py  test_layers.py  test_mcp_server.py  test_miner.py  test_onboarding.py  test_palace_graph.py  test_palace_graph_tunnels.py  test_query_sanitizer.py  test_readme_claims.py  test_searcher.py
(+20 files in other folders)
