[project]
name = "memagora-contracts"
version = "0.1.0"
description = "Wire format shared between MemAgora palace clients and the agora server. Pure dataclass schemas, no runtime dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "MemAgora contributors"},
]
keywords = ["memagora", "schema", "contracts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Independently versioned so palace and agora can advance on different
# release cadences. Rolling deploys (engineer client v1.2 talking to
# server v1.3) need the schema layer to evolve separately.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts"]
